--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,6 +1,6 @@
-section > div {
+/*section > div {
     width: 50%;
-    background: red; */
+    background: red; 
     border: 4px solid black;
     margin-bottom: 25px;
 }
@@ -11,7 +11,7 @@ section {
 section h1, section p {
     width: 560px;
     margin-left: 108px;
-}
+}*/
 
 section h1 {
     font-size: 40px;
