--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -99,3 +99,13 @@ article ul {
 article ol {
   list-style-type: upper-alpha;
 }
+.gallery {
+  width: 1020px;
+  display: flex;
+  justify-content: space-between;
+  margin: 79px auto 79px;
+}
+.gallery_img {
+  width: 48%;
+  margin: 0;
+}
