--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -109,3 +109,34 @@ article ol {
   width: 48%;
   margin: 0;
 }
+#footer_logo {
+  height: 16px;
+  margin: 30px 0 30px;
+}
+footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  /* width: 1020px; */
+  margin: 79px auto 0;
+  border-top: 1px solid var(--color-divider, #EFEFEF);
+}
+
+.footer_content {
+  display: flex;
+  flex-direction: column;
+}
+
+footer a {
+  text-decoration: none;
+  color: #778;
+  margin: 8px 0 8px 0;
+}
+
+footer a:hover {
+  color: black;
+}
+
+#footer_hse_logo {
+  height: 32px;
+}
