--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -3,6 +3,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'PT Sans', sans-serif;
 }
+
+article{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: 'PT Sans', sans-serif;
+}
+
 a {
   color: inherit;
 }
@@ -111,14 +118,13 @@ article ol {
 }
 #footer_logo {
   height: 16px;
-  margin: 30px 0 30px;
 }
 footer {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
-  /* width: 1020px; */
+  align-items: flex-start;
   margin: 79px auto 0;
+  padding: 32px 0;
   border-top: 1px solid var(--color-divider, #EFEFEF);
 }
 
@@ -130,7 +136,6 @@ footer {
 footer a {
   text-decoration: none;
   color: #778;
-  margin: 8px 0 8px 0;
 }
 
 footer a:hover {
@@ -138,5 +143,9 @@ footer a:hover {
 }
 
 #footer_hse_logo {
-  height: 32px;
+  height: 60px;
+}
+
+.footer_link {
+  margin-bottom: 16px;
 }
