--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,5 @@
 @import url('reset.css');
+@import url(fonts.css);
 @import url('layout.css');
 @import url('sidebar.css');
 @import url('menubar.css');
