--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,18 +1,22 @@
-/*section > div {
+section > div {
     width: 50%;
-    background: red; 
-    border: 4px solid black;
     margin-bottom: 25px;
 }
 section {
+    width: 1440px;
     display: flex;
-    border: 4px solid blue;
 }
 section h1, section p {
     width: 560px;
     margin-left: 108px;
-}*/
-
+}
+body {
+    /* width: 1440px; */
+    background-color: white;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+}
 section h1 {
     font-size: 40px;
     line-height: 46px;
@@ -37,4 +41,8 @@ section:nth-of-type(2) p {
 section:nth-of-type(3)
 div:nth-of-type(1) {
     margin-top: -65px;
+}
+
+footer {
+    width: 100%;
 }
