--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,3 +1,6 @@
+body > section, body > div {
+    width: 1440px;
+}
 section > div {
     width: 50%;
     margin-bottom: 25px;
@@ -44,7 +47,7 @@ div:nth-of-type(1) {
 }
 
 .img_border {
-    border: 1px solid #EFEFEF;
+    border: 1px solid #ddd;
     border-radius: 5px;
 }
 
@@ -56,7 +59,7 @@ div:nth-of-type(1) {
     flex-direction: column;
     margin: 0 auto 0;
     padding: 0;
-    border-top: 1px solid var(--color-divider, #EFEFEF);
+    border-top: 1px solid #ddd;
 }
 
 .footer_about h1 {
