--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -125,7 +125,7 @@ footer {
   align-items: flex-start;
   margin: 79px auto 0;
   padding: 32px 0;
-  border-top: 1px solid var(--color-divider, #EFEFEF);
+  border-top: 1px solid #ddd;
 }
 
 .footer_content {
