--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -4,9 +4,9 @@
     height: 40px;
     align-items: center;
     border-bottom: 1px solid #ddd;
-    -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.02);
+    /* -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.02);
     -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.02);
-    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.02);
+    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.02); */
 }
 .index-item {
     display: block;
@@ -17,9 +17,9 @@
     border-radius: 3px;
     padding: 30px 20px;
     position: relative;
-    -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+    /* -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2); */
 }
 
 .index-item img {
