--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,20 +1,19 @@
-body > section, body > div {
-    width: 1440px;
-}
+/* body > section, body > div {
+   width: 1440px;
+} */
 section > div {
     width: 50%;
     margin-bottom: 25px;
 }
 section {
-    width: 1440px;
     display: flex;
+    overflow: hidden;
 }
 section h1, section p {
     width: 560px;
     margin-left: 108px;
 }
 body {
-    /* width: 1440px; */
     background-color: white;
     display: block;
     margin: 0 auto;
